fix: removed Java21 getFirst()